--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "kothic-js",
   "version": "0.2.0",
   "devDependencies": {
+    "chai": "^4.0.0",
+    "mocha": "^3.4.2",
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2"
   },
   "scripts": {
-    "prepublish": "grunt"
+    "prepublish": "grunt",
+    "test": "./node_modules/.bin/mocha -u bdd --recursive"
   },
   "dependencies": {
     "rbush": "^2.0.1"
