--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "./node_modules/.bin/mocha -u bdd --recursive"
   },
   "dependencies": {
+    "canvas": "^2.3.1",
     "pegjs": "^0.10.0",
     "rbush": "^2.0.1"
   }
