Major refactoring of the styling subsystem

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "canvas": "^2.3.1",
+    "nearley": "^2.16.0",
     "pegjs": "^0.10.0",
     "rbush": "^2.0.1"
   }
