--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas": "^2.3.1",
     "nearley": "^2.16.0",
     "pegjs": "^0.10.0",
-    "rbush": "^2.0.1"
+    "rbush": "^2.0.1",
+    "rewire": "^4.0.1"
   }
 }
