--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.3.0",
   "devDependencies": {
     "grunt": "^1.0.4",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^4.0.1"
   },
   "scripts": {
     "prepublish": "grunt"
